# fara-7b-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
examples/: README.md  failure_modes.md
examples/flight_capetown_london/: transcript.json
examples/wikipedia_claude_shannon/: transcript.json
fara/: __init__.py  agent.py  cli.py  executor.py  model.py  parser.py  prompt.py  viewer.py
scripts/: download_model.sh
tests/: test_agent.py  test_parser.py  test_viewer.py
